Got background triangle to render in correct position

--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
         </div>
 
         <div class="scoreboard">
-          <p>SCORE</p>
-          <p class="current-score">0</p>
+          <div class="score-text">
+            <p class="score-marker">SCORE</p>
+            <p class="current-score">0</p>
+          </div>
         </div>
+      </div>
+
+      <div class="game-body">
+        <div class="component-body">
+          <div class="component rock"></div>
+        </div>
+
       </div>
     </section>
 
