Finished styling the home page, implemented empty script.js file

--- a/index.html
+++ b/index.html
@@ -33,14 +33,32 @@
         </div>
       </div>
 
-      <div class="game-body">
-        <div class="component-body">
-          <div class="component rock"></div>
-        </div>
+      <div class="game-board">
+        <div class="board">
+          <img src="images/bg-triangle.svg">
 
+          <button class="component rock">
+            <img src="images/icon-rock.svg">
+          </button>
+
+          <button class="component paper">
+            <img src="images/icon-paper.svg">
+          </button>
+
+          <button class="component scissors">
+            <img src="images/icon-scissors.svg">
+          </button>
+        </div>
       </div>
+
+      <button class="rules">RULES</button>
+
+      
+      </div>
+
     </section>
 
 
+    <script src="script.js"></script>
   </body>
 </html>
