Got rule box to overlay correctly now

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="board">
-          <img src="images/bg-triangle.svg">
+          <img class = "game-board "src="images/bg-triangle.svg">
 
           <button class="component rock">
             <img src="images/icon-rock.svg">
