Can now go from main to game page upon selecting a hand

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           <img class = "game-board "src="images/bg-triangle.svg">
 
           <button class="component rock">
-            <img src="images/icon-rock.svg">
+            <a href="game.html"><img class="option" src="images/icon-rock.svg"></a>
           </button>
 
           <button class="component paper">
-            <img src="images/icon-paper.svg">
+            <a href="game.html"><img class="option" src="images/icon-paper.svg"></a>
           </button>
 
           <button class="component scissors">
-            <img src="images/icon-scissors.svg">
+            <a href="game.html"><img class="option" src="images/icon-scissors.svg"></a>
           </button>
         </div>
 
@@ -58,8 +58,7 @@
       </div>
 
     </div>
-
-
-    <script src="script.js"></script>
+    <script type="module" src="bundle.js"></script>
+    
   </body>
 </html>
