--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
     </div>
-    <script type="module" src="bundle.js"></script>
+    <script type="module" src="script.js"></script>
     
   </body>
 </html>
