Implemented local storage to allow for datat to be passed to game.html

--- a/game.html
+++ b/game.html
@@ -39,12 +39,18 @@
                 <div class="gameplay">
                     <div class="my-choice">
                         <p class="choice-text">YOU PICKED</p>
-                        <img class="player-choice">
+
+                        <div class="p-image">
+                            <img class="player-choice">
+                        </div>
                     </div>
 
                     <div class="opponent">
                         <p class="choice-text">THE HOUSE PICKED</p>
-                        <img class="computer-choice">
+                        
+                        <div class="c-image">
+                            <img class="computer-choice">
+                        </div>
                     </div>
                 </div>
         
