Can now decide if player has won or lost a hand

--- a/game.html
+++ b/game.html
@@ -45,6 +45,8 @@
                         </div>
                     </div>
 
+                    <div class="play-again"></div>
+
                     <div class="opponent">
                         <p class="choice-text">THE HOUSE PICKED</p>
                         
