Implemented box-shadow so we can distinguish which is winning hand

--- a/game.html
+++ b/game.html
@@ -8,13 +8,11 @@
         
         <title>Frontend Mentor | Rock, Paper, Scissors</title>
 
-        <link rel = "stylesheet" href = "styles.css">
-        <link rel = "stylesheet" href = "game.css">
-
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
+        <link rel = "stylesheet" href = "styles.css">
+        <link rel = "stylesheet" href = "game.css">
 
     </head>
     <body>     
@@ -48,7 +46,7 @@
                     <div class="play-again"></div>
 
                     <div class="opponent">
-                        <p class="choice-text">THE HOUSE PICKED</p>
+                        <p class="computer-text">THE HOUSE PICKED</p>
                         
                         <div class="c-image">
                             <img class="computer-choice">
